# Basict

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/basict/: basict
devel/lib/pkgconfig/: basict.pc
devel/share/basict/cmake/: basictConfig.cmake
src/basict/: CMakeLists.txt
src/basict/src/: BackEnd.cpp  BackEnd.h  main.cpp  main.qml
